# L3-c-cpp

./: .gitignore  CMakeLists.txt  README.md  add_ex.py  main.c
TP1/ex1/: ex1.c  ex1.h
TP1/ex2/: ex2.c  ex2.h
TP1/ex3/: ex3.c  ex3.h
TP1/ex4/: ex4.c  ex4.h
TP1/ex5/: ex5.c  ex5.h
TP1/ex6/: ex6.c  ex6.h
TP2/ex1/: ex1.c  ex1.h
TP2/ex10/: ex10.c  ex10.h
TP2/ex11/: ex11.c  ex11.h
TP2/ex12/: ex12.c  ex12.h
TP2/ex2/: ex2.c  ex2.h
TP2/ex3/: ex3.c  ex3.h
TP2/ex4/: ex4.c  ex4.h
TP2/ex5/: ex5.c  ex5.h
TP2/ex6/: ex6.c  ex6.h
TP2/ex7/: ex7.c  ex7.h
TP2/ex8/: ex8.c  ex8.h
TP2/ex9/: ex9.c  ex9.h
TP3/ex1/: ex1.c  ex1.h
TP3/ex10/: ex10.c  ex10.h
TP3/ex11/: ex11.c  ex11.h
TP3/ex12/: ex12.c  ex12.h
TP3/ex2/: ex2.c  ex2.h
TP3/ex3/: ex3.c  ex3.h
TP3/ex4/: ex4.c  ex4.h
TP3/ex5/: ex5.c  ex5.h
TP3/ex6/: ex6.c  ex6.h
TP3/ex7/: ex7.c  ex7.h
TP3/ex8/: ex8.c  ex8.h
TP3/ex9/: ex9.c  ex9.h
TP4/ex1/: ex1.c  ex1.h
TP4/ex2/: ex2.c  ex2.h
TP4/ex3/: ex3.c  ex3.h
TP4/ex4/: ex4.c  ex4.h
TP4/ex5/: ex5.c  ex5.h
TP4/ex6/: ex6.c  ex6.h
TP5/ex1/: ex1.c  ex1.h
TP5/ex2/: ex2.c  ex2.h
TP5/ex3/: ex3.c  ex3.h
TP5/ex4/: ex4.c  ex4.h
TP5/ex5/: ex5.c  ex5.h
TP5/ex6/: ex6.c  ex6.h
TP6/ex1/: ex1.c  ex1.h
TP6/ex2/: ex2.c  ex2.h
TP6/ex3/: ex3.c  ex3.h
